# twitter-clone-api

./: .gitignore  Dockerfile  Migration.Dockerfile  docker-compose.yaml  entrypoint.sh  pyproject.toml
migration/: env.py
migration/seed_data/: profiles.json  users.json
migration/versions/: de97dabb56e0_.py
src/: main.py
src/api/: user.py
src/api/public/: auth.py  register.py
src/db/: db_setup.py
src/db/models/: profile.py  user.py
src/db/utils/: profile.py  user.py
src/schemas/: profile.py  user.py
src/utils/: auth.py
