[tool.poetry]
name = "twitter-clone-api"
version = "0.1.0"
description = "Twitter clone API using Python"
authors = ["dtalay"]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.27.0"
fastapi = "^0.109.0"
pydantic = "^2.5.3"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
pathlib = "^1.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
